@@ -1,3 +1,7 @@
+[B]Version 2.0.0[/B]
+- The streamlink module is no longer used to get the streams.
+- Added channel region settings, defaults to London
+
 [B]Version 1.2.0[/B]
 - Replace xmbcswift2 with simpleplugin
 
